--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,5 +6,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to Azure App Services - Github Actions in Effect</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+   <h3>
+       @ViewData["Greeting"]
+   </h3>
 </div>
